--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "1f9aa142-8f1b-4237-a7f2-2bf0402b13a7",
    "metadata": {
     "tags": []
@@ -91,26 +91,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "01.11.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# for file_name in e_file_list:\n",
-    "#     print(file_name)\n",
-    "#     df_tmp = pd.read_csv(e_path + \"/\" + file_name, sep=\";\")\n",
-    "#     break"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -119,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -362,11 +342,36 @@
       "\t\tчерновики:\t\t\t408138\t(408138)\n",
       "\t\tбизнес-правила:\t\t\t15837\t(15837)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
-      "\t\tотсутствуют\n"
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл 12.12.2023.csv:\n",
+      "\t\tвсего строк:\t\t\t495671\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tстолбец 'Название субъекта РФ':\t\t 1 (0.0 %)\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t1\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t4665\t(5.54 %)\n",
+      "\t\tSlot_uncorrected:\t\t3033\t(2.12 %)\n",
+      "\t\tBook_uncorrected:\t\t217\t(1.0 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t39407\t(39407)\n",
+      "\t\tтехнические ошибки:\t\t51641\t(49171)\n",
+      "\t\tошибки ФЭР:\t\t\t25225\t(25225)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t361258\t(361256)\n",
+      "\t\tбизнес-правила:\t\t\t15850\t(15850)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "                      Название субъекта РФ       final_state  value\n",
+      "Федеральное медико-биологическое агентство Ошибка отсутсвует      2\n",
+      "CPU times: total: 7.08 s\n",
+      "Wall time: 23 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# ошибки записи\n",
     "for file_name in e_file_list:\n",
     "    df_tmp = pd.read_csv(e_path + \"/\" + file_name, sep=\";\")\n",
@@ -575,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -781,11 +786,32 @@
       "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
       "\t\t168748 (168748)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
-      "\t\tотсутствуют\n"
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл И38_успешные_сессии_20231212.csv:\n",
+      "\t\tвсего строк:\t\t153347\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t2503\t(1.63 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t0\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t153273 (153273)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "CPU times: total: 1.91 s\n",
+      "Wall time: 6.21 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# успешные записи\n",
     "for file_name in s_file_list:\n",
     "    df_tmp_s = pd.read_csv(s_path + \"/\" + file_name, sep=\";\")\n",
@@ -857,44 +883,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Файл: ... 2023-12-11/Ежедневные_данные_по_сессиям.xlsx\n",
-      "\t\tвсего строк:\t\t20188\n",
+      "Файл: ... 2023-12-12/Ежедневные_данные_по_сессиям.xlsx\n",
+      "\t\tвсего строк:\t\t20316\n",
       "\t\tвсего столбцов:\t\t12 (верно)\n",
-      "\t\tдиапазон дат: \t\t2023-06-12 - 2023-12-11\n",
+      "\t\tдиапазон дат: \t\t2023-06-12 - 2023-12-12\n",
       "\t\tназвание шага 4:\t'Шаг 4. Запись. Уникальные сессии' - верное\n",
       "\tНазвания шагов, используемые в файле:\n",
       "\t\t Шаг 1. Идентификация пациента в регионе. Уникальные сессии\n",
       "\t\t Шаг 2. Выбор специальности. Уникальные сессии\n",
       "\t\t Шаг 3. Выбор врача и времени. Уникальные сессии\n",
       "\t\t Шаг 4. Запись. Уникальные сессии\n",
-      "\tПропуски данных за весь период (всего (доля от общего числа строк)):\n",
-      "\t\tКод региона:\t\t0\t(0.0 %)\n",
-      "\t\tРегион:\t\t\t0\t(0.0 %)\n",
-      "\t\tДата:\t\t\t0\t(0.0 %)\n",
-      "\t\tШаг:\t\t\t0\t(0.0 %)\n",
-      "\t\tВсего:\t\t\t0\t(0.0 %)\n",
-      "\t\tУспешно:\t\t0\t(0.0 %)\n",
-      "\t\tОшибки ЕПГУ:\t\t0\t(0.0 %)\n",
-      "\t\tТех ошибки:\t\t0\t(0.0 %)\n",
-      "\t\tОрг ошибки:\t\t0\t(0.0 %)\n",
-      "\t\tПОДД:\t\t\t0\t(0.0 %)\n",
-      "\t\tБрошенные:\t\t0\t(0.0 %)\n",
-      "\t\tБизнес-правила:\t\t18308\t(90.69 %)\n",
-      "\tРезультаты записи на приём с использованием витрин ЕПГУ на 2023-12-11\n",
+      "\tПропуски данных за весь период и за 2023-12-12 (всего (доля от общего числа строк)):\n",
+      "\t\t\t\t\tвесь период\t\t2023-12-12\n",
+      "\t\tКод региона:\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tРегион:\t\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tШаг:\t\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tВсего:\t\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tУспешно:\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tОшибки ЕПГУ:\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tТех ошибки:\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tОрг ошибки:\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tПОДД:\t\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tБрошенные:\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
+      "\t\tБизнес-правила:\t\t18308\t(90.12 %)\t0\t(0.0 %)\n",
+      "\tРезультаты записи на приём с использованием витрин ЕПГУ на 2023-12-12\n",
       "\t(бизнес-правила игнорируются):\n",
-      "\t\tуспешные записи:\t66405\n",
-      "\t\tтехнические ошибки:\t7504\n",
-      "\t\tорганизационные ошибки:\t30371\n",
-      "\t\tошибки ФЭР:\t\t54\n",
-      "\t\tчерновики:\t\t205808\n",
-      "\t\tбизнес-правила:\t\t5261\n"
+      "\t\tуспешные записи:\t56838\n",
+      "\t\tтехнические ошибки:\t5291\n",
+      "\t\tорганизационные ошибки:\t24306\n",
+      "\t\tошибки ФЭР:\t\t36\n",
+      "\t\tчерновики:\t\t171934\n",
+      "\t\tбизнес-правила:\t\t4606\n"
      ]
     }
    ],
@@ -921,45 +948,63 @@
     "for step_name in step_name_list:\n",
     "    print(\"\\t\\t\", step_name)\n",
     "# пропуски данных\n",
-    "print(\"\\tПропуски данных за весь период (всего (доля от общего числа строк)):\")\n",
+    "print(\n",
+    "    f'\\tПропуски данных за весь период и за {str(df_dm[\"Дата\"].max())[:10]} (всего (доля от общего числа строк)):'\n",
+    ")\n",
     "missing_dm_dict = {}\n",
+    "missing_dm_lastdate_dict = {}\n",
+    "df_dm_lastdate = df_dm[df_dm[\"Дата\"] == df_dm[\"Дата\"].max()]\n",
     "for column in df_dm.columns:\n",
     "    missing_dm_dict[column] = [\n",
     "        df_dm[column].isnull().sum(),\n",
     "        round(df_dm[column].isnull().sum() * 100 / df_dm.shape[0], 2),\n",
     "    ]\n",
+    "    missing_dm_lastdate_dict[column] = [\n",
+    "        df_dm_lastdate[column].isnull().sum(),\n",
+    "        round(df_dm_lastdate[column].isnull().sum() * 100 / df_dm_lastdate.shape[0], 2),\n",
+    "    ]\n",
+    "print(f'\\t\\t\\t\\t\\tвесь период\\t\\t{str(df_dm[\"Дата\"].max())[:10]}')\n",
+    "\n",
     "print(\n",
-    "    f'\\t\\tКод региона:\\t\\t{missing_dm_dict[\"Код региона\"][0]}\\t({missing_dm_dict[\"Код региона\"][1]} %)'\n",
+    "    f'\\t\\tКод региона:\\t\\t{missing_dm_dict[\"Код региона\"][0]}\\t({missing_dm_dict[\"Код региона\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Код региона\"][0]}\\t({missing_dm_lastdate_dict[\"Код региона\"][1]} %)'\n",
     ")\n",
     "print(\n",
-    "    f'\\t\\tРегион:\\t\\t\\t{missing_dm_dict[\"Регион\"][0]}\\t({missing_dm_dict[\"Регион\"][1]} %)'\n",
-    ")\n",
-    "print(f'\\t\\tДата:\\t\\t\\t{missing_dm_dict[\"Дата\"][0]}\\t({missing_dm_dict[\"Дата\"][1]} %)')\n",
-    "print(f'\\t\\tШаг:\\t\\t\\t{missing_dm_dict[\"Шаг\"][0]}\\t({missing_dm_dict[\"Шаг\"][1]} %)')\n",
-    "print(\n",
-    "    f'\\t\\tВсего:\\t\\t\\t{missing_dm_dict[\"Всего\"][0]}\\t({missing_dm_dict[\"Всего\"][1]} %)'\n",
+    "    f'\\t\\tРегион:\\t\\t\\t{missing_dm_dict[\"Регион\"][0]}\\t({missing_dm_dict[\"Регион\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Регион\"][0]}\\t({missing_dm_lastdate_dict[\"Регион\"][1]} %)'\n",
     ")\n",
     "print(\n",
-    "    f'\\t\\tУспешно:\\t\\t{missing_dm_dict[\"Успешно\"][0]}\\t({missing_dm_dict[\"Успешно\"][1]} %)'\n",
+    "    f'\\t\\tДата:\\t\\t\\t{missing_dm_dict[\"Дата\"][0]}\\t({missing_dm_dict[\"Дата\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Дата\"][0]}\\t({missing_dm_lastdate_dict[\"Дата\"][1]} %)'\n",
     ")\n",
     "print(\n",
-    "    f'\\t\\tОшибки ЕПГУ:\\t\\t{missing_dm_dict[\"Ошибки ЕПГУ\"][0]}\\t({missing_dm_dict[\"Ошибки ЕПГУ\"][1]} %)'\n",
+    "    f'\\t\\tШаг:\\t\\t\\t{missing_dm_dict[\"Шаг\"][0]}\\t({missing_dm_dict[\"Шаг\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Шаг\"][0]}\\t({missing_dm_lastdate_dict[\"Шаг\"][1]} %)'\n",
     ")\n",
     "print(\n",
-    "    f'\\t\\tТех ошибки:\\t\\t{missing_dm_dict[\"Тех ошибки\"][0]}\\t({missing_dm_dict[\"Тех ошибки\"][1]} %)'\n",
+    "    f'\\t\\tВсего:\\t\\t\\t{missing_dm_dict[\"Всего\"][0]}\\t({missing_dm_dict[\"Всего\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Всего\"][0]}\\t({missing_dm_lastdate_dict[\"Всего\"][1]} %)'\n",
     ")\n",
     "print(\n",
-    "    f'\\t\\tОрг ошибки:\\t\\t{missing_dm_dict[\"Орг ошибки\"][0]}\\t({missing_dm_dict[\"Орг ошибки\"][1]} %)'\n",
-    ")\n",
-    "print(f'\\t\\tПОДД:\\t\\t\\t{missing_dm_dict[\"ПОДД\"][0]}\\t({missing_dm_dict[\"ПОДД\"][1]} %)')\n",
-    "print(\n",
-    "    f'\\t\\tБрошенные:\\t\\t{missing_dm_dict[\"Брошенные\"][0]}\\t({missing_dm_dict[\"Брошенные\"][1]} %)'\n",
+    "    f'\\t\\tУспешно:\\t\\t{missing_dm_dict[\"Успешно\"][0]}\\t({missing_dm_dict[\"Успешно\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Успешно\"][0]}\\t({missing_dm_lastdate_dict[\"Успешно\"][1]} %)'\n",
     ")\n",
     "print(\n",
-    "    f'\\t\\tБизнес-правила:\\t\\t{missing_dm_dict[\"Бизнес-правила\"][0]}\\t({missing_dm_dict[\"Бизнес-правила\"][1]} %)'\n",
+    "    f'\\t\\tОшибки ЕПГУ:\\t\\t{missing_dm_dict[\"Ошибки ЕПГУ\"][0]}\\t({missing_dm_dict[\"Ошибки ЕПГУ\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Ошибки ЕПГУ\"][0]}\\t({missing_dm_lastdate_dict[\"Ошибки ЕПГУ\"][1]} %)'\n",
     ")\n",
-    "print(f'\\tРезультаты записи на приём с использованием витрин ЕПГУ на {str(df_dm[\"Дата\"].max())[:10]}')\n",
-    "print('\\t(бизнес-правила игнорируются):')\n",
+    "print(\n",
+    "    f'\\t\\tТех ошибки:\\t\\t{missing_dm_dict[\"Тех ошибки\"][0]}\\t({missing_dm_dict[\"Тех ошибки\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Тех ошибки\"][0]}\\t({missing_dm_lastdate_dict[\"Тех ошибки\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\t\\tОрг ошибки:\\t\\t{missing_dm_dict[\"Орг ошибки\"][0]}\\t({missing_dm_dict[\"Орг ошибки\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Орг ошибки\"][0]}\\t({missing_dm_lastdate_dict[\"Орг ошибки\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\t\\tПОДД:\\t\\t\\t{missing_dm_dict[\"ПОДД\"][0]}\\t({missing_dm_dict[\"ПОДД\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"ПОДД\"][0]}\\t({missing_dm_lastdate_dict[\"ПОДД\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\t\\tБрошенные:\\t\\t{missing_dm_dict[\"Брошенные\"][0]}\\t({missing_dm_dict[\"Брошенные\"][1]} %)\\t\\t{missing_dm_lastdate_dict[\"Брошенные\"][0]}\\t({missing_dm_lastdate_dict[\"Брошенные\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\t\\tБизнес-правила:\\t\\t{missing_dm_dict[\"Бизнес-правила\"][0]}\\t({missing_dm_dict[\"Бизнес-правила\"][1]} %)\\t{missing_dm_lastdate_dict[\"Бизнес-правила\"][0]}\\t({missing_dm_lastdate_dict[\"Бизнес-правила\"][1]} %)'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\tРезультаты записи на приём с использованием витрин ЕПГУ на {str(df_dm[\"Дата\"].max())[:10]}'\n",
+    ")\n",
+    "print(\"\\t(бизнес-правила игнорируются):\")\n",
     "# количество успешных записей\n",
     "dm_s = df_dm[\n",
     "    (df_dm[\"Дата\"] == df_dm[\"Дата\"].max()) & (df_dm[\"Шаг\"] == step_name_list[3])\n",
