--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -386,8 +386,30 @@
       "\t\tбизнес-правила:\t\t\t14148\t(14148)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
       "\t\tотсутствуют\n",
-      "CPU times: total: 7.89 s\n",
-      "Wall time: 25.3 s\n"
+      "\n",
+      "Файл 14.12.2023.csv:\n",
+      "\t\tвсего строк:\t\t\t423373\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t3723\t(5.17 %)\n",
+      "\t\tSlot_uncorrected:\t\t2347\t(1.99 %)\n",
+      "\t\tBook_uncorrected:\t\t197\t(1.13 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t30500\t(30500)\n",
+      "\t\tтехнические ошибки:\t\t68602\t(66608)\n",
+      "\t\tошибки ФЭР:\t\t\t20323\t(20323)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t290351\t(290351)\n",
+      "\t\tбизнес-правила:\t\t\t11643\t(11643)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "Название субъекта РФ              final_state  value\n",
+      "         г. Байконур Сервис МИС приостановлен      1\n",
+      "CPU times: total: 4.52 s\n",
+      "Wall time: 27.1 s\n"
      ]
     }
    ],
@@ -844,8 +866,26 @@
       "\t\t139066 (139066)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
       "\t\tотсутствуют\n",
-      "CPU times: total: 1.89 s\n",
-      "Wall time: 6.68 s\n"
+      "\n",
+      "Файл И38_успешные_сессии_20231214.csv:\n",
+      "\t\tвсего строк:\t\t127494\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t2081\t(1.63 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t0\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t127431 (127431)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "CPU times: total: 1.73 s\n",
+      "Wall time: 7.62 s\n"
      ]
     }
    ],
