--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -408,8 +408,72 @@
       "\tСубъекты, не отображаемые на дашборде:\n",
       "Название субъекта РФ              final_state  value\n",
       "         г. Байконур Сервис МИС приостановлен      1\n",
-      "CPU times: total: 4.52 s\n",
-      "Wall time: 27.1 s\n"
+      "\n",
+      "Файл 15.12.2023.csv:\n",
+      "\t\tвсего строк:\t\t\t342384\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t2996\t(4.96 %)\n",
+      "\t\tSlot_uncorrected:\t\t2483\t(2.53 %)\n",
+      "\t\tBook_uncorrected:\t\t162\t(1.08 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t22583\t(22583)\n",
+      "\t\tтехнические ошибки:\t\t49400\t(47702)\n",
+      "\t\tошибки ФЭР:\t\t\t15970\t(15970)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t242542\t(242541)\n",
+      "\t\tбизнес-правила:\t\t\t10304\t(10304)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "                      Название субъекта РФ       final_state  value\n",
+      "Федеральное медико-биологическое агентство Ошибка отсутсвует      1\n",
+      "\n",
+      "Файл 16.12.2023.csv:\n",
+      "\t\tвсего строк:\t\t\t164971\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t2229\t(7.03 %)\n",
+      "\t\tSlot_uncorrected:\t\t1569\t(3.29 %)\n",
+      "\t\tBook_uncorrected:\t\t93\t(1.55 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t11916\t(11916)\n",
+      "\t\tтехнические ошибки:\t\t16048\t(15446)\n",
+      "\t\tошибки ФЭР:\t\t\t7898\t(7898)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t123902\t(123902)\n",
+      "\t\tбизнес-правила:\t\t\t4150\t(4150)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл 17.12.2023.csv:\n",
+      "\t\tвсего строк:\t\t\t211895\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t2643\t(6.53 %)\n",
+      "\t\tSlot_uncorrected:\t\t1841\t(2.72 %)\n",
+      "\t\tBook_uncorrected:\t\t119\t(1.58 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t15421\t(15421)\n",
+      "\t\tтехнические ошибки:\t\t15482\t(14833)\n",
+      "\t\tошибки ФЭР:\t\t\t9852\t(9852)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t164931\t(164931)\n",
+      "\t\tбизнес-правила:\t\t\t5081\t(5081)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "CPU times: total: 12.5 s\n",
+      "Wall time: 30.4 s\n"
      ]
     }
    ],
@@ -884,8 +948,62 @@
       "\t\t127431 (127431)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
       "\t\tотсутствуют\n",
-      "CPU times: total: 1.73 s\n",
-      "Wall time: 7.62 s\n"
+      "\n",
+      "Файл И38_успешные_сессии_20231215.csv:\n",
+      "\t\tвсего строк:\t\t108708\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t1846\t(1.7 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t0\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t108667 (108667)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл И38_успешные_сессии_20231216.csv:\n",
+      "\t\tвсего строк:\t\t51688\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t1293\t(2.5 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t0\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t51657 (51657)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "\n",
+      "Файл И38_успешные_сессии_20231217.csv:\n",
+      "\t\tвсего строк:\t\t67898\n",
+      "\t\tвсего столбцов:\t\t9 (верно)\n",
+      "\tПропуски данных (всего (доля от общего числа строк)):\n",
+      "\t\tДата:\t\t\t0\t(0.0 %)\n",
+      "\t\tsession_id:\t\t0\t(0.0 %)\n",
+      "\t\tНазвание субъекта РФ:\t0\t(0.0 %)\n",
+      "\t\tsp_oid:\t\t\t1477\t(2.18 %)\n",
+      "\t\tsp_name:\t\t0\t(0.0 %)\n",
+      "\t\tpost_name:\t\t0\t(0.0 %)\n",
+      "\t\tslot_ts:\t\t0\t(0.0 %)\n",
+      "\t\tcreate_ts:\t\t0\t(0.0 %)\n",
+      "\t\tТип записи:\t\t0\t(0.0 %)\n",
+      "\tКоличество успешных записей (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\t67855 (67855)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "\t\tотсутствуют\n",
+      "CPU times: total: 2.73 s\n",
+      "Wall time: 8.25 s\n"
      ]
     }
    ],
@@ -962,25 +1080,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Файл: ... 2023-12-14/Ежедневные_данные_по_сессиям.xlsx\n",
-      "\t\tвсего строк:\t\t20584\n",
+      "Файл: ... 2023-12-17/Ежедневные_данные_по_сессиям.xlsx\n",
+      "\t\tвсего строк:\t\t21008\n",
       "\t\tвсего столбцов:\t\t12 (верно)\n",
-      "\t\tдиапазон дат: \t\t2023-06-12 - 2023-12-14\n",
+      "\t\tдиапазон дат: \t\t2023-06-12 - 2023-12-17\n",
       "\t\tназвание шага 4:\t'Шаг 4. Запись. Уникальные сессии' - верное\n",
       "\tНазвания шагов, используемые в файле:\n",
       "\t\t Шаг 1. Идентификация пациента в регионе. Уникальные сессии\n",
       "\t\t Шаг 2. Выбор специальности. Уникальные сессии\n",
       "\t\t Шаг 3. Выбор врача и времени. Уникальные сессии\n",
       "\t\t Шаг 4. Запись. Уникальные сессии\n",
-      "\tПропуски данных за весь период и за 2023-12-14 (всего (доля от общего числа строк)):\n",
-      "\t\t\t\t\tвесь период\t\t2023-12-14\n",
+      "\tПропуски данных за весь период и за 2023-12-17 (всего (доля от общего числа строк)):\n",
+      "\t\t\t\t\tвесь период\t\t2023-12-17\n",
       "\t\tКод региона:\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
       "\t\tРегион:\t\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
       "\t\tДата:\t\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
@@ -992,15 +1110,15 @@
       "\t\tОрг ошибки:\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
       "\t\tПОДД:\t\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
       "\t\tБрошенные:\t\t0\t(0.0 %)\t\t0\t(0.0 %)\n",
-      "\t\tБизнес-правила:\t\t18308\t(88.94 %)\t0\t(0.0 %)\n",
-      "\tРезультаты записи на приём с использованием витрин ЕПГУ на 2023-12-14\n",
+      "\t\tБизнес-правила:\t\t18308\t(87.15 %)\t0\t(0.0 %)\n",
+      "\tРезультаты записи на приём с использованием витрин ЕПГУ на 2023-12-17\n",
       "\t(бизнес-правила игнорируются):\n",
-      "\t\tуспешные записи:\t55897\n",
-      "\t\tтехнические ошибки:\t13823\n",
-      "\t\tорганизационные ошибки:\t22417\n",
-      "\t\tошибки ФЭР:\t\t45\n",
-      "\t\tчерновики:\t\t174181\n",
-      "\t\tбизнес-правила:\t\t4156\n"
+      "\t\tуспешные записи:\t39093\n",
+      "\t\tтехнические ошибки:\t6957\n",
+      "\t\tорганизационные ошибки:\t15434\n",
+      "\t\tошибки ФЭР:\t\t14\n",
+      "\t\tчерновики:\t\t120553\n",
+      "\t\tбизнес-правила:\t\t2444\n"
      ]
     }
    ],
