--- a/work/scripts/validation_tsifrimed.ipynb
+++ b/work/scripts/validation_tsifrimed.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1f9aa142-8f1b-4237-a7f2-2bf0402b13a7",
    "metadata": {
     "tags": []
@@ -165,66 +165,92 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Файл 10.04.2024.csv:\n",
-      "\t\tвсего строк:\t\t\t501527\n",
+      "Файл 12.04.2024.csv:\n",
+      "\t\tвсего строк:\t\t\t423841\n",
+      "\t\tвсего столбцов:\t\t\t13 (верно)\n",
+      "\tПропуски в столбцах, где их быть не должно:\n",
+      "\t\tотсутствуют\n",
+      "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
+      "\t\tValidatePerson_uncorrected:\t1\t(0.0 %)\n",
+      "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t2919\t(3.25 %)\n",
+      "\t\tSlot_uncorrected:\t\t2241\t(2.27 %)\n",
+      "\t\tBook_uncorrected:\t\t61\t(0.53 %)\n",
+      "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
+      "\t\tорганизационные ошибки:\t\t36751\t(36690)\n",
+      "\t\tтехнические ошибки:\t\t41002\t(40187)\n",
+      "\t\tошибки ФЭР:\t\t\t25759\t(25749)\n",
+      "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
+      "\t\tчерновики:\t\t\t309739\t(309573)\n",
+      "\t\tбизнес-правила:\t\t\t8813\t(8806)\n",
+      "\tСубъекты, не отображаемые на дашборде:\n",
+      "                      Название субъекта РФ                                      final_state  value\n",
+      "Федеральное медико-биологическое агентство       Внутренняя ошибка РМИС при создании записи     13\n",
+      "Федеральное медико-биологическое агентство                              Значение не найдено     61\n",
+      "Федеральное медико-биологическое агентство                         Ошибка «РМИС не ответил»      9\n",
+      "Федеральное медико-биологическое агентство Ошибка во входных параметрах при записи на прием     10\n",
+      "Федеральное медико-биологическое агентство                                Ошибка отсутсвует    166\n",
+      "Федеральное медико-биологическое агентство    Пациент уже записан к специалисту в этот день      7\n",
+      "\n",
+      "Файл 13.04.2024.csv:\n",
+      "\t\tвсего строк:\t\t\t212388\n",
       "\t\tвсего столбцов:\t\t\t13 (верно)\n",
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
       "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
       "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
-      "\t\tServiceOrSpecs_uncorrected:\t3605\t(3.3 %)\n",
-      "\t\tSlot_uncorrected:\t\t2559\t(2.06 %)\n",
-      "\t\tBook_uncorrected:\t\t91\t(0.66 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t1998\t(4.31 %)\n",
+      "\t\tSlot_uncorrected:\t\t1575\t(3.05 %)\n",
+      "\t\tBook_uncorrected:\t\t53\t(0.98 %)\n",
       "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
-      "\t\tорганизационные ошибки:\t\t46975\t(46884)\n",
-      "\t\tтехнические ошибки:\t\t38439\t(37340)\n",
-      "\t\tошибки ФЭР:\t\t\t29059\t(29052)\n",
+      "\t\tорганизационные ошибки:\t\t19354\t(19323)\n",
+      "\t\tтехнические ошибки:\t\t12972\t(12626)\n",
+      "\t\tошибки ФЭР:\t\t\t13682\t(13679)\n",
       "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
-      "\t\tчерновики:\t\t\t373862\t(373595)\n",
-      "\t\tбизнес-правила:\t\t\t10694\t(10682)\n",
+      "\t\tчерновики:\t\t\t160993\t(160923)\n",
+      "\t\tбизнес-правила:\t\t\t4198\t(4197)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
       "                      Название субъекта РФ                                      final_state  value\n",
-      "Федеральное медико-биологическое агентство       Внутренняя ошибка РМИС при создании записи      6\n",
-      "Федеральное медико-биологическое агентство                              Значение не найдено     91\n",
-      "Федеральное медико-биологическое агентство                         Ошибка «РМИС не ответил»      1\n",
-      "Федеральное медико-биологическое агентство Ошибка во входных параметрах при записи на прием      7\n",
-      "Федеральное медико-биологическое агентство                                Ошибка отсутсвует    267\n",
-      "Федеральное медико-биологическое агентство    Пациент уже записан к специалисту в этот день     12\n",
+      "Федеральное медико-биологическое агентство                              Значение не найдено     31\n",
+      "Федеральное медико-биологическое агентство                         Ошибка «РМИС не ответил»      7\n",
+      "Федеральное медико-биологическое агентство Ошибка во входных параметрах при записи на прием      3\n",
+      "Федеральное медико-биологическое агентство                                Ошибка отсутсвует     70\n",
+      "Федеральное медико-биологическое агентство    Пациент уже записан к специалисту в этот день      1\n",
       "\n",
-      "Файл 11.04.2024.csv:\n",
-      "\t\tвсего строк:\t\t\t483399\n",
+      "Файл 14.04.2024.csv:\n",
+      "\t\tвсего строк:\t\t\t272067\n",
       "\t\tвсего столбцов:\t\t\t13 (верно)\n",
       "\tПропуски в столбцах, где их быть не должно:\n",
       "\t\tотсутствуют\n",
       "\tОшибки данных (количество и доля от числа строк на соответствующем этапе):\n",
-      "\t\tValidatePerson_uncorrected:\t3\t(0.01 %)\n",
+      "\t\tValidatePerson_uncorrected:\t0\t(0.0 %)\n",
       "\t\tMO_uncorrected:\t\t\t0\t(0.0 %)\n",
-      "\t\tServiceOrSpecs_uncorrected:\t3565\t(3.34 %)\n",
-      "\t\tSlot_uncorrected:\t\t2338\t(1.91 %)\n",
-      "\t\tBook_uncorrected:\t\t71\t(0.54 %)\n",
+      "\t\tServiceOrSpecs_uncorrected:\t2395\t(4.07 %)\n",
+      "\t\tSlot_uncorrected:\t\t1600\t(2.4 %)\n",
+      "\t\tBook_uncorrected:\t\t37\t(0.55 %)\n",
       "\tКоличество ошибок записи на приём (тип записи \"К врачу\"; рассылка (дашборд)):\n",
-      "\t\tорганизационные ошибки:\t\t41259\t(41181)\n",
-      "\t\tтехнические ошибки:\t\t33760\t(32861)\n",
-      "\t\tошибки ФЭР:\t\t\t28379\t(28376)\n",
+      "\t\tорганизационные ошибки:\t\t26680\t(26635)\n",
+      "\t\tтехнические ошибки:\t\t13905\t(13566)\n",
+      "\t\tошибки ФЭР:\t\t\t16886\t(16880)\n",
       "\t\tпрочие ошибки:\t\t\t0\t(0)\n",
-      "\t\tчерновики:\t\t\t367391\t(367268)\n",
-      "\t\tбизнес-правила:\t\t\t10365\t(10349)\n",
+      "\t\tчерновики:\t\t\t207860\t(207789)\n",
+      "\t\tбизнес-правила:\t\t\t5337\t(5337)\n",
       "\tСубъекты, не отображаемые на дашборде:\n",
       "                      Название субъекта РФ                                      final_state  value\n",
-      "Федеральное медико-биологическое агентство                              Значение не найдено     78\n",
-      "Федеральное медико-биологическое агентство                         Ошибка «РМИС не ответил»     14\n",
-      "Федеральное медико-биологическое агентство Ошибка во входных параметрах при записи на прием      3\n",
-      "Федеральное медико-биологическое агентство                                Ошибка отсутсвует    123\n",
-      "Федеральное медико-биологическое агентство    Пациент уже записан к специалисту в этот день     16\n",
+      "Федеральное медико-биологическое агентство       Внутренняя ошибка РМИС при создании записи      1\n",
+      "Федеральное медико-биологическое агентство                              Значение не найдено     45\n",
+      "Федеральное медико-биологическое агентство                         Ошибка «РМИС не ответил»      3\n",
+      "Федеральное медико-биологическое агентство Ошибка во входных параметрах при записи на прием      6\n",
+      "Федеральное медико-биологическое агентство                                Ошибка отсутсвует     71\n",
       "Записи, содержащие '_':\n",
       "Записи, содержащие '_':\n",
       "-----------------------------------------------------------------------------------------------\n",
-      "Вчерашний файл:\t\t10.04.2024.csv\n",
-      "Актуальный файл:\t11.04.2024.csv\n",
+      "Вчерашний файл:\t\t12.04.2024.csv\n",
+      "Актуальный файл:\t14.04.2024.csv\n",
       "-----------------------------------------------------------------------------------------------\n",
-      "CPU times: total: 1 s\n",
-      "Wall time: 6.77 s\n"
+      "CPU times: total: 1.19 s\n",
+      "Wall time: 5.75 s\n"
      ]
     }
    ],
@@ -232,7 +258,7 @@
     "%%time\n",
     "# ошибки записи (два последние файла)\n",
     "m=0\n",
-    "for file_name in e_file_list[-2:]:\n",
+    "for file_name in e_file_list[-3:]:\n",
     "    if m == 0:\n",
     "        file_name_for_error_count_yesterday = file_name\n",
     "    else:\n",
