--- a/work/scripts/picturies.ipynb
+++ b/work/scripts/picturies.ipynb
@@ -573,10 +573,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from PIL import ImageGrab\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "img = ImageGrab.grab(bbox=(100,10,400,780))\n",
+    "img.show()"
+   ]
   }
  ],
  "metadata": {
