--- a/work/scripts/big_bot.ipynb
+++ b/work/scripts/big_bot.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,6 +556,7 @@
     "\n",
     "\n",
     "def dhb_status(df_e, df_s, db_path):\n",
+    "    global nodhb_reg_list\n",
     "    \"\"\"Сверка с дашбордом МЗ РФ\"\"\"\n",
     "    conn = sqlite3.connect(db_path)\n",
     "    cur = conn.cursor()\n",
@@ -566,12 +567,13 @@
     "    \"\"\"\n",
     "    send_region_list = [x[0] for x in cur.execute(send_region_query).fetchall()]\n",
     "    df_reg_ref = reg_ref(db_path)\n",
+    "    df_reg_ref_ndhb = df_reg_ref.copy()\n",
     "    df_reg_ref = df_reg_ref[df_reg_ref[\"reg_name\"].isin(send_region_list)]\n",
     "    # выбор рандомного региона\n",
     "    random_region_list = df_reg_ref.iloc[\n",
     "        random.randint(0, df_reg_ref.shape[0])\n",
     "    ].tolist()[:2]\n",
-    "    df_nodhb_reg = df_reg_ref[df_reg_ref[\"public_flag\"] == 0]\n",
+    "    df_nodhb_reg = df_reg_ref_ndhb[df_reg_ref_ndhb[\"public_flag\"] == 0]\n",
     "    nodhb_reg_list = list(\n",
     "        set(df_nodhb_reg[\"reg_name\"].tolist() + df_nodhb_reg[\"reg_name_data\"].tolist())\n",
     "    )\n",
@@ -2235,6 +2237,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodhb_reg_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -2282,16 +2304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(48, 60)"
+       "(74, 48)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2335,21 +2357,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## А вот и **бот**\n",
+    "## А вот **БОТ**\n",
     "![alt text](big_bot-1-1.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-14 17:17:42,817 (__init__.py:966 MainThread) ERROR - TeleBot: \"Infinity polling: polling exited\"\n",
-      "2024-10-14 17:17:42,820 (__init__.py:968 MainThread) ERROR - TeleBot: \"Break infinity polling\"\n"
+      "2024-10-14 17:45:20,307 (__init__.py:966 MainThread) ERROR - TeleBot: \"Infinity polling: polling exited\"\n",
+      "2024-10-14 17:45:20,308 (__init__.py:968 MainThread) ERROR - TeleBot: \"Break infinity polling\"\n"
      ]
     }
    ],
